fix body align-items prop

--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ body {
     padding: 20px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     min-height: 100vh;
 }
 
